[project]
name = "PPO-Continuous-Pytorch"
version = "0.1.0"
description = "Proximal Policy Optimization"
authors = [{ name="XinJingHao" }]
requires-python = ">=3.13.0"
dependencies = [
    "gymnasium[box2d]",
    "numpy",
    "pygame",
    "swig",
    "torch",
    "tqdm",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
    "ptpython>=3.0.32",
]
